--- a/index.html
+++ b/index.html
@@ -1,34 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Field Cheat Sheets</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Urban Field Reference</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+  <main class="shell">
+    <section class="hero-card">
+      <h1>Urban Field Reference</h1>
+      <p class="sub">Don't guess, get it right the first time.</p>
 
-<header>Field Cheat Sheets</header>
-
-<nav>
-  <button class="spray-btn" onclick="showSection('spray')">Spray Foam</button>
-  <button class="hvac-btn" onclick="showSection('hvac')">HVAC</button>
-</nav>
-
-<section id="spray" class="active">
-  <div class="card">
-    <h3>Closed Cell Yield</h3>
-    <p>1 Set = 4000 board feet (theoretical)</p>
-  </div>
-</section>
-
-<section id="hvac">
-  <div class="card">
-    <h3>CFM Per Ton</h3>
-    <p>400 CFM per ton</p>
-  </div>
-</section>
-
-<script src="js/script.js"></script>
+      <div class="home-actions">
+        <a class="btn btn-spray" href="spray-foam.html">Urban Spray Foam</a>
+        <a class="btn btn-hvac" href="hvac.html">Urban Mechanical</a>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
