--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Urban Field Reference</title>
-  <link rel="stylesheet" href="css/styles.css" />
-</head>
-<body>
-  <main class="shell">
-    <section class="hero-card">
-      <h1>Urban Field Reference</h1>
-      <p class="sub">Don't guess, get it right the first time.</p>
 
-      <div class="home-actions">
-        <a class="btn btn-spray" href="spray-foam.html">Urban Spray Foam</a>
-        <a class="btn btn-hvac" href="hvac.html">Urban Mechanical</a>
-      </div>
-    </section>
-  </main>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Urban Field Reference</title>
+    <link rel="stylesheet" href="css/styles.css" />
+</head>
+
+<body>
+    <main class="shell">
+        <section class="hero-card">
+            <h1>Urban Field Tools</h1>
+
+            <div class="home-actions">
+                <a class="btn btn-spray" href="spray-foam.html">Urban Spray Foam</a>
+                <a class="btn btn-hvac" href="hvac.html">Urban Mechanical</a>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
